Update pom.xml for versioning, add dependencies, and configure plugins; implement Node and CryptoManager tests

--- a/pom.xml
+++ b/pom.xml
@@ -5,23 +5,34 @@
 
     <groupId>com.atlasdblite</groupId>
     <artifactId>atlasdb-lite</artifactId>
-    <version>1.1.0-CLI</version>
+    <version>2.1.0-SECURE</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
+        <!-- JSON Processing -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+
+        <!-- TestNG Framework -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.8.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- Exec Plugin -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -29,6 +40,12 @@
                 <configuration>
                     <mainClass>com.atlasdblite.AtlasShell</mainClass>
                 </configuration>
+            </plugin>
+            <!-- Surefire Plugin (Runs tests) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
             </plugin>
         </plugins>
     </build>
